--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "router": "^1.3.5"
+    "react-slick": "^0.28.1",
+    "react-slideshow-image": "^3.6.0",
+    "router": "^1.3.5",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
