--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "rules": { "declaration-colon-newline-after": null }
 }
