--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "react": "^17.0.2",
-    "react-browser-router": "^2.1.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
-    "react-router": "^6.0.0",
-    "react-router-dom": "^6.0.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-slideshow-image": "^3.6.0",
