--- a/package.json
+++ b/package.json
@@ -10,16 +10,13 @@
     "localStorage": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-browser-router": "^2.1.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
     "react-slideshow-image": "^3.6.0",
-    "router": "^1.3.5",
-    "slick-carousel": "^1.8.1"
+    "router": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
